--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ h2 {
   font-weight: 500;
   font-size: 32px;
   line-height: 38px;
-  /* identical to box height */
 
   color: #000000;
 }
@@ -158,4 +157,194 @@ button {
 
   background: url(/assets/icons8-hourglass.gif);
   background-repeat: no-repeat;
+}
+
+/* --------------Page ToDo------------------- */
+.man {
+  position: absolute;
+  width: 256px;
+  height: 433px;
+  left: 56px;
+  top: 169px;
+
+  background: url(/assets/3d-business-man-standing-with-laptop-and-coffee.png);
+}
+
+.DailyTasks {
+  position: absolute;
+  width: 162px;
+  height: 38px;
+  left: 583px;
+  top: 163px;
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 38px;
+
+  color: #000000;
+}
+
+.Name {
+  position: absolute;
+  width: 226px;
+  height: 36px;
+  left: 1262px;
+  top: 365px;
+
+  background: #d9d9d9;
+}
+
+#password {
+  position: absolute;
+  width: 226px;
+  height: 36px;
+  left: 1262px;
+  top: 405px;
+
+  background: #d9d9d9;
+}
+
+#logIn {
+  position: absolute;
+  width: 126px;
+  height: 36px;
+  left: 1302px;
+  top: 445px;
+
+  background: #d9d9d9;
+}
+
+#logIn:hover {
+  background-color: rgba(250, 245, 245, 0.55);
+}
+
+.purple {
+  position: absolute;
+  width: 190px;
+  height: 153px;
+  left: 1136px;
+  top: 165px;
+
+  background: #af9adc;
+  border-radius: 15px;
+}
+
+.pink {
+  position: absolute;
+  width: 190px;
+  height: 153px;
+  left: 251px;
+  top: 550px;
+
+  background: #d39adc;
+  border-radius: 15px;
+}
+
+.colorTable {
+  position: absolute;
+  width: 886px;
+  height: 359px;
+  left: 354px;
+  top: 251px;
+
+  background: rgba(250, 245, 245, 0.55);
+}
+
+.Ct {
+  position: absolute;
+  width: 149px;
+  height: 24px;
+  left: 47px;
+  top: 10px;
+
+  background: #d9d9d9;
+}
+
+.Ds {
+  position: absolute;
+  width: 149px;
+  height: 24px;
+  left: 207px;
+  top: 10px;
+
+  background: #d9d9d9;
+}
+
+.Dl {
+  position: absolute;
+  width: 149px;
+  height: 24px;
+  left: 367px;
+  top: 10px;
+
+  background: #d9d9d9;
+}
+
+.Pr {
+  position: absolute;
+  width: 149px;
+  height: 24px;
+  left: 527px;
+  top: 10px;
+
+  background: #d9d9d9;
+}
+
+.Com {
+  position: absolute;
+  width: 149px;
+  height: 24px;
+  left: 687px;
+  top: 10px;
+
+  background: #d9d9d9;
+}
+
+#Ct {
+  position: absolute;
+  width: 149px;
+  height: 24px;
+  left: 47px;
+  top: 40px;
+}
+
+#Ds {
+  position: absolute;
+  width: 149px;
+  height: 24px;
+  left: 207px;
+  top: 40px;
+}
+
+#Dl {
+  position: absolute;
+  width: 149px;
+  height: 24px;
+  left: 367px;
+  top: 40px;
+}
+
+#Pr {
+  position: absolute;
+  width: 149px;
+  height: 24px;
+  left: 527px;
+  top: 40px;
+}
+
+#Com {
+  position: absolute;
+  width: 149px;
+  height: 24px;
+  left: 687px;
+  top: 40px;
+}
+
+.checkbox {
+  position: relative;
+  display: block;
+  width: 20px;
+  height: 20px;
 }
